# candle-mps-flash-attention

./: Cargo.toml  README.md
examples/: test_flash_attn.rs
src/: lib.rs
